<?xml version="1.0" encoding="utf-8"?>
<!--  
 * Copyright (c) 2011, MENKI MOBILE SOLUTIONS - http://www.menkimobile.com.br
 * All rights reserved.
 * 
 * Redistribution and use in source and binary forms, with or without modification, 
 * are permitted provided that the following conditions are met:
 *
 * * Redistributions of source code must retain the above copyright notice, 
 *   this list of conditions and the following disclaimer.
 * * Redistributions in binary form must reproduce the above copyright notice, 
 *   this list of conditions and the following disclaimer in the documentation and/or 
 *   other materials provided with the distribution.
 * * Neither the name of the MENKI MOBILE SOLUTIONS nor the names of its contributors 
 *   may be used to endorse or promote products derived from this software without 
 *   specific prior written permission.
 *   
 *  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY 
 *  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES 
 *  OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT 
 *  SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, 
 *  INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED 
 *  TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR 
 *  BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN 
 *  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN 
 *  ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF 
 *  SUCH DAMAGE. 
 *  
 *  @version 0.0.1
-->

<resources>
    <string name="hello">Hello World, Payment!</string>
    <string name="app_name">Moip Android Module</string>
    <string name="attention">Atenção!</string>
    <string name="back">Retornar</string>
    <string name="insert">Inserir</string>
    <string name="change">Alterar</string>
    <string name="value">Valor:</string>
    
    <!-- Strings for credit card screen -->
    <string name="credit_card">Cartão de crédito</string>
    <string name="choose_brand">Escolha uma bandeira</string>
    <string name="brand">Bandeira:</string>
    <string name="credit_card_number">Número:</string>
    <string name="expiration_date">Expiração:</string>
    <string name="expiration_date_hint">Ex.: mm/aa</string>
    <string name="secure_code">Código de segurança:</string>
    <string name="credit_card_owner">Portador</string>
    <string name="owner_name">Nome:</string>
    <string name="owner_phone_number">Telefone:</string>
    <string name="birth_date">Data de nascimento:</string>
    <string name="installments">Parcelas:</string>
    <string name="payment_type">Forma de pagamento:</string>
    <string name="cash_payment">A vista</string>
    <string name="installment_payment">Parcelado</string>
    <string name="next_step">Prosseguir</string>
    
    <!-- Arrays for credit card screen -->
	<string-array name="brands_array">
		<item>American Express</item>
		<item>Mastercard</item>
		<item>Visa</item>
	</string-array>

     <!-- Strings for payer screen -->
    <string name="payer">Pagador</string>
    <string name="full_name">Nome completo:</string>
    <string name="email">Email:</string>
    <string name="cell_phone">Telefone celular:</string>
    <string name="address">Endereço</string>
    <string name="street_address">Logradouro:</string>
    <string name="street_number">Número:</string>
    <string name="street_complement">Complemento:</string>
    <string name="neighborhood">Bairro:</string>
    <string name="city">Cidade:</string>
    <string name="state">Estado:</string>
    <string name="choose_state">Escolha um estado</string>
    <string name="zip_code">CEP:</string>
    <string name="fixed_phone">Telefone fixo:</string>
    
    <!-- Arrays for payer screen -->
    <string-array name="state_array">
		<item>AC</item>
		<item>AL</item>
		<item>AP</item>	
		<item>AM</item>	
		<item>BA</item>
		<item>CE</item>	
		<item>DF</item>
		<item>ES</item>
		<item>GO</item>
		<item>MA</item>	
		<item>MT</item>	
		<item>MS</item>
		<item>MG</item>
		<item>PA</item>	
		<item>PB</item>	
		<item>PR</item>	
		<item>PE</item>	
		<item>PI</item>	
		<item>RJ</item>	
		<item>RN</item>
		<item>RS</item>
		<item>RO</item>	
		<item>RR</item>
		<item>SC</item>	
		<item>SP</item>	
		<item>SE</item>
		<item>TO</item>
	</string-array>
    
    <!-- Strings and arrays shared between payer screen and credi card screen-->
    <string name="choose_identification_type">Escolha um tipo de documento:</string>
    <string name="all_fields_must_be_filled">Por favor, preencha todos os campos requeridos</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="identification_type">Tipo de identificação:</string>
    <string name="identification_number">Número:</string>

	<string name="test_app_title">MoIP for Android - Test App</string>
	<string name="pagamento_direto_button">Pagamento Direto</string>
	<string name="finish_button">Finalizar Compra</string>
	<string name="return_button">Voltar</string>
	<string name="payment_summary">Resumo da compra</string>
	<string name="result">Resultado da Transação</string>
	<string name="status">Status: </string>
	<string name="return_message">Mensagem de retorno: </string>
	<string name="transaction_status">Status da Transação: </string>
	<string name="waiting_server">Executando transação. Aguarde...</string>
</resources>
