<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:scrollbars="vertical" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent">
     
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="1">

    <TextView
        android:text="@string/payer"
        android:textSize="18px"
        android:paddingBottom="6dip" />
        
	<View
        android:layout_height="4dip"
        android:background="#FF909090" 
        android:layout_marginBottom="6dip"/>        

	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/full_name"
	        android:layout_weight="1" />
	</TableRow>
	<TableRow>	        
	    <EditText
	    	android:id="@+id/full_name"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" 
	        android:layout_weight="1"/>
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/email"
	        android:layout_weight="1"  />
	</TableRow>
	<TableRow>	        
	    <EditText
	    	android:id="@+id/email"
	    	android:layout_column="2"
	        android:inputType="textEmailAddress"
	        android:layout_weight="1"  />
	</TableRow>

	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/cell_phone" />
	    <EditText
	    	android:id="@+id/cell_phone"
	    	android:layout_column="2"
	        android:inputType="number" />
	</TableRow>

	<TableRow>
		<Spinner 
	        android:id="@+id/identification_type"
	        android:prompt="@string/choose_identification_type"
	        android:layout_column="1"
	        android:entries="@array/identification_types_array" />	
	    <EditText
	    	android:id="@+id/payer_identification_number"
	    	android:layout_column="2"
	        android:inputType="number"  />
	</TableRow>

    <TextView
        android:text="@string/address"
        android:textSize="18px"
        android:layout_marginTop="18dip"
        android:layout_marginBottom="6dip" />
        
	<View
        android:layout_height="4dip"
        android:background="#FF909090" 
        android:layout_marginBottom="6dip"/>   
         	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/street_address" />
	    <EditText
	    	android:id="@+id/street_address"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/street_number" />
	    <EditText
	    	android:id="@+id/street_number"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/street_complement" />
	    <EditText
	    	android:id="@+id/street_complement"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/neighborhood" />
	    <EditText
	    	android:id="@+id/neighborhood"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/city" />
	    <EditText
	    	android:id="@+id/city"
	    	android:layout_column="2"
	        android:inputType="textCapSentences" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/state" />
		<Spinner 
	        android:id="@+id/state"
	        android:prompt="@string/choose_state"
	        android:layout_column="2"
	        android:entries="@array/state_array" />
	</TableRow>
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/zip_code" />
	    <EditText
	    	android:id="@+id/zip_code"
	    	android:layout_column="2"
	        android:inputType="number" />
	</TableRow>	
	
	<TableRow>
	    <TextView
	        android:layout_column="1"
	        android:text="@string/fix_phone" />
	    <EditText
	    	android:id="@+id/fix_phone"
	    	android:layout_column="2"
	        android:inputType="number" />
	</TableRow>	
	
	<Button
		android:layout_gravity="center"
		android:layout_weight="1"
		android:text="@string/next_step"
		android:id="@+id/payer_next_step" />
</TableLayout>
</ScrollView>