<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/owner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip">
    <TextView
        android:text="@string/credit_card_owner"
        android:layout_marginBottom="6dip" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_height="4dip"
        android:background="@color/dark_blue"
        android:layout_marginBottom="6dip"
        android:layout_width="fill_parent" />

    <TextView 
        android:text="@string/owner_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/owner_name"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView 
        android:text="@string/identification_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/identification_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip" >
        <RadioButton
            android:id="@+id/radio_credit_card_rg"
            android:checked="false"
            android:text="@string/rg" 
            android:textColor="@color/light_blue" />
        <RadioButton
            android:id="@+id/radio_credit_card_cpf"
            android:checked="false"
            android:text="@string/cpf" 
            android:textColor="@color/light_blue" />
    </RadioGroup>

    <TextView 
        android:text="@string/identification_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/identification_number"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/birth_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>       
    <DatePicker 
        android:id="@+id/birth_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView 
        android:text="@string/payment_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/payment_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip">
        <RadioButton
            android:id="@+id/radio_cash_payment"
            android:text="@string/cash_payment" 
            android:checked="true"
            android:textColor="@color/light_blue"/>
        <RadioButton
            android:id="@+id/radio_installment_payment"
            android:checked="false"
            android:text="@string/installment_payment" 
            android:textColor="@color/light_blue" />
    </RadioGroup>

    <TextView
        android:id="@+id/installments_textview" 
        android:text="@string/installments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/installments"
        android:inputType="number" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</merge>
