<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/credit_card"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip">
    <TextView
        android:text="@string/credit_card"
        android:textSize="18px"
        android:paddingBottom="6dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_height="4dip"
        android:background="#FF909090" 
        android:layout_marginBottom="6dip"
        android:layout_width="fill_parent"/>
    
    <TextView 
        android:text="@string/brand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Spinner 
        android:id="@+id/brand"
        android:prompt="@string/choose_brand"
        android:entries="@array/brands_array" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView 
        android:text="@string/credit_card_number" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/credit_card_number"
        android:maxLength="16"
        android:inputType="number" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:text="@string/expiration_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:id="@+id/expiration_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/expiration_date_button"
        android:text="@string/insert" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:text="@string/secure_code" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/secure_code"
        android:maxLength="13"
        android:inputType="number" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
</merge>
