<?xml version="1.0" encoding="utf-8"?>
<!--  
 * Copyright (c) 2011, MENKI MOBILE SOLUTIONS - http://www.menkimobile.com.br
 * All rights reserved.
 * 
 * Redistribution and use in source and binary forms, with or without modification, 
 * are permitted provided that the following conditions are met:
 *
 * * Redistributions of source code must retain the above copyright notice, 
 *   this list of conditions and the following disclaimer.
 * * Redistributions in binary form must reproduce the above copyright notice, 
 *   this list of conditions and the following disclaimer in the documentation and/or 
 *   other materials provided with the distribution.
 * * Neither the name of the MENKI MOBILE SOLUTIONS nor the names of its contributors 
 *   may be used to endorse or promote products derived from this software without 
 *   specific prior written permission.
 *   
 *  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY 
 *  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES 
 *  OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT 
 *  SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, 
 *  INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED 
 *  TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR 
 *  BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN 
 *  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN 
 *  ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF 
 *  SUCH DAMAGE. 
 *  
 *  @version 0.0.1
-->

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/result" 
		android:id="@+id/ResultTitleTextView" 
		android:layout_alignParentTop="true" 
		android:layout_centerHorizontal="true" 
		android:layout_margin="20dip">
	</TextView>
	
	<TextView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_margin="20dip" 
				android:text="@string/status" 
				android:id="@+id/ResultStatusTextView"
				android:layout_below="@id/ResultTitleTextView">
	</TextView>
	
	<TextView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="StatusContent" 
				android:id="@+id/ResultStatusContentTextView"
				android:layout_below="@id/ResultTitleTextView" 
				android:layout_toRightOf="@id/ResultStatusTextView" 
				android:layout_marginTop="20dip">
	</TextView>
	
	<TextView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_margin="20dip" 
				android:text="@string/transaction_status" 
				android:id="@+id/TransactionStatusTextView"
				android:layout_below="@id/ResultStatusTextView">
	</TextView>
	
	<TextView android:layout_width="wrap_content" 
				android:layout_height="wrap_content"  
				android:id="@+id/TransactionStatusContentTextView"
				android:layout_below="@id/ResultStatusTextView" 
				android:layout_toRightOf="@id/TransactionStatusTextView" 
				android:layout_marginTop="20dip">
	</TextView>
	
	<TextView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_margin="20dip" 
				android:text="@string/return_message" 
				android:id="@+id/ResultMessageTextView"
				android:layout_below="@id/TransactionStatusTextView">
	</TextView>
	
	<ScrollView android:id="@+id/ResultScrollView"
		android:layout_width="wrap_content" 
		android:layout_below="@+id/ResultMessageTextView"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dip">
	
		<TextView android:layout_width="wrap_content" 
					android:layout_height="wrap_content"  
					android:text="MessageContent" 
					android:id="@+id/ResultMessageContentTextView" 
					>
		</TextView>
		
	</ScrollView>
	
</RelativeLayout>
